--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
       lineElement.textContent = "Thinking of something sweet for you...";
 
       try {
-        const res = await fetch('http://localhost:5000/generate', {
+        const res = await fetch('https://mynewproject-opkv.onrender.com/generate', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' }
         });
